RESOLVED FIXED35412
[Qt] Incorrect painting after a size changed
https://bugs.webkit.org/show_bug.cgi?id=35412
Summary [Qt] Incorrect painting after a size changed
Nick Young
Reported 2010-02-25 17:50:26 PST
A bug exists in the painting code in MediaPlayerPrivateQt which causes incorrect painting after changing size from a larger size to a smaller size. Such a situation can occur in an HTML implementation of Fullscreen (when returning from fullscreen). Patch coming.
Attachments
Initial Patch (1.26 KB, patch)
2010-02-25 17:52 PST, Nick Young
no flags
Nick Young
Comment 1 2010-02-25 17:52:55 PST
Created attachment 49555 [details] Initial Patch Worlds simplest patch.
WebKit Commit Bot
Comment 2 2010-02-26 12:42:09 PST
Comment on attachment 49555 [details] Initial Patch Clearing flags on attachment: 49555 Committed r55302: <http://trac.webkit.org/changeset/55302>
WebKit Commit Bot
Comment 3 2010-02-26 12:42:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.