2010-02-26  Nicholas Young  <nicholas.young@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Incorrect painting after a size changed.
        https://bugs.webkit.org/show_bug.cgi?id=35412

        No new tests. Bug fix in backend.

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivate::paint): Provide the source rectangle, rather than inferring it.

git-svn-id: svn://svn.chromium.org/blink/trunk@55302 bbb929c8-8fbe-4397-9dbb-9b2b20218538