third_party/WebKit/WebCore/platform/graphics/qt/MediaPlayerPrivateQt.cpp
@@ -538,7 +538,7 @@ void MediaPlayerPrivate::paint(GraphicsContext* context, const IntRect& rect)
     QPainter* painter = context->platformContext();
 
     // Render the video
-    m_videoScene->render(painter, QRectF(QRect(rect)));
+    m_videoScene->render(painter, QRectF(QRect(rect)), m_videoItem->sceneBoundingRect());
 }
 
 void MediaPlayerPrivate::repaint()
